--- a/index.html
+++ b/index.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-  <meta charset="utf-8">
-
-  <script src="p5.min.js"></script>
-  <script src="p5.dom.min.js"></script> 
-  <script src="p5.sound.min.js"></script>
-  <script src="p5.play.js"></script>
-
-  <link rel="stylesheet" type="text/css" href="style.css">
-    
-
-  </head>
-  <body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jogo do Trex</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="p5.js"></script>
+    <script src="p5.dom.min.js"></script>
+    <script src="p5.play.js"></script>
+    <script src="p5.sound.min.js"></script>
+</head>
+<body>
     <!-- <h1>Jogo do Trex</h1> -->
     <script src="main.js"></script>
-    
-  
-
-</body></html>
+</body>
+</html>
